Actualizacion de la pagina Sobre Nosotros

--- a/PAGINA/main.css
+++ b/PAGINA/main.css
@@ -687,7 +687,18 @@ div.titulo3:hover{
 }
 
 
+.pagina5{
+    background-color: #dadada;
+}
 
+.cuadropreguntas{
+    padding-top:40px ;
+    padding-bottom:40px ;
+}
+.titulo2{
+    text-align: center;
+    padding-bottom: 10px;
+}
 
 
 
